fixed alignment of art images

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,8 +28,9 @@ main {
 }
 
 nav {
+   position: fixed;
+   right: 5vw;
    width: 150px;
-   float: right;
    border: 5px solid red;
    > ul {
       padding-top: 14vh;
@@ -129,10 +130,25 @@ section {
    > img {
       display: block;
       height: inherit;
-      width: auto;
       margin: 0 auto;
    }
 }
+
+.thumb {
+   width: 275px;
+   height: 275px;
+   background-color: #ccc;
+   margin-left: 10px;
+   margin-right: 10px;
+   margin-bottom: 40px;
+   border: 1px solid red;
+   display: inline-block;
+   > img {
+      width: inherit;
+      margin-top: 38px;
+   }
+}
+
 
 body.artwork {
    background-color: #e5e3dc
